// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Cell component cell component - toMatchSnapshot 1 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="tableCell "
        >
          335
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`the Cell component cell component - toMatchSnapshot 2 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="tableCell closeValue"
        >
          335
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`the Cell component cell component - toMatchSnapshot 3 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="tableCell "
        >
          10%
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
